# library

./: .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  pyproject.toml  volare_config.example.json
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  lint.yml  notionjira-commit-log.yml  publish.yml  security.yml  test.yml  version-bumper.yml
documentations/: csv_filter_doc.md  dashboard_image_doc.md  data_utils_doc.md  database_doc.md  google_drive_doc.md  listener_doc.md  logger_doc.md  network_resilience.md  ocr_doc.md  report_downloader_doc.md  retry_utils_doc.md  scheduler_doc.md  service_account_manager_doc.md  telegram_doc.md  uploader_doc.md  webscraper_doc.md
functions/: csv_filter.py  data_utils.py  uploader.py
logbook/: API Token Documentation.docx  bugs.md
src/vdx_auto_utils/: __init__.py  csv_filter.py  dashboard_image.py  data_utils.py  database.py  google_drive.py  google_meet.py  listener.py  logger.py  network_resilience.py  ocr.py  report_downloader.py  retry_utils.py  scheduler.py  service_account_manager.py  telegram.py  uploader.py  volare.py  webscraper.py  webscraper_nodriver.py
tests/: test_dashboard_image.py  test_data_utils.py  test_database.py  test_retry_utils.py  test_service_account_manager.py
