[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vdx_auto_utils"
version = "0.9.3" #Update the version everytime an update is finalized
description = "Internal automation tools for Vendox"
authors = [
    {name = "Potter", email = "potter@4896.co"},
    {name = "Beckham", email = "beckham@4896.co"},
    {name = "Elwin", email = "elwin@4896.co"},
    {name = "Bryan", email = "bryan@4896.co"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "gspread",
    "google-api-python-client",
    "google-auth",
    "oauth2client",
    "selenium",
    "requests",
    "psycopg2",
    "pyotp",
    "opencv-python-headless",
    "google-genai",
    "google-api-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "black",
    "ruff",
]
 
[tool.setuptools.packages.find]
where = ["src"]
 
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]